Initial Vue-related work

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@ Homestead.yaml
 .phpstorm.meta.php
 _ide_helper.php
 _ide_helper_models.php
+
+# Compiled assets
+/public/css/*.css
+/public/css/*.css.map
+/public/js/*.js
+/public/js/*.js.map
