--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
     "dev": "gulp watch"
   },
   "devDependencies": {
-    "dotenv": "^2.0.0",
-    "foundation-sites": "^6.2.4-rc2",
     "gulp": "^3.9.1",
     "jquery": "^3.1.0",
     "laravel-elixir": "^6.0.0-11",
@@ -15,6 +13,7 @@
     "laravel-elixir-webpack-official": "^1.0.2",
     "lodash": "^4.16.2",
     "vue": "^2.0.1",
-    "vue-resource": "^1.0.3"
+    "vue-resource": "^1.0.3",
+    "foundation-sites": "^6.2.4-rc2"
   }
 }
