--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "gulp watch"
   },
   "devDependencies": {
+    "foundation-sites": "^6.2.4-rc2",
     "gulp": "^3.9.1",
     "jquery": "^3.1.0",
     "laravel-elixir": "^6.0.0-11",
@@ -13,7 +14,9 @@
     "laravel-elixir-webpack-official": "^1.0.2",
     "lodash": "^4.16.2",
     "vue": "^2.0.1",
-    "vue-resource": "^1.0.3",
-    "foundation-sites": "^6.2.4-rc2"
+    "vue-resource": "^1.0.3"
+  },
+  "dependencies": {
+    "moment": "^2.15.2"
   }
 }
